# motogp-analytics

./: .gitignore  README.md  business_questions.md  config_macOS.md  data_download.ipynb  docker-compose.integrated.yml  info.md  main.py  pyproject.toml  todo.md
apps/: __init__.py
apps/streamlit_demo/: README.md  __init__.py  main.py  run_app.py
apps/streamlit_demo/components/: __init__.py  metrics.py  sidebar.py
apps/streamlit_demo/utils/: __init__.py  api_client.py  config.py
data/: .gitkeep  README.md
data/interim/: .gitkeep
data/processed/: .gitkeep
database/: .env.example  __init__.py  exceptions.py  requirements.txt  setup_database.py
database/api/: __init__.py  database.py  main.py  models.py  queries.py
database/config/: __init__.py  settings.py
database/etl/: __init__.py  import_data.py
database/schema/: 01_create_tables.sql  02_create_views.sql
docs/: data_urls.txt
integration/: .env.template
integration/scripts/: setup-complete-platform.sh
notebooks/: 00_data_download.ipynb  01_data_preview.ipynb  README.md  data_download.ipynb
notebooks/00_business_understanding/: business_requirements.ipynb
notebooks/01_data_understanding/: constructors_exploration.ipynb  events_held_exploration.ipynb  finishing_positions_exploration.ipynb  podium_lockouts_exploration.ipynb  race_winners_exploration.ipynb  riders_info_exploration.ipynb
notebooks/02_data_preparation/: constructors_preparation.ipynb  events_held_preparation.ipynb  finishing_positions_preparation.ipynb  podium_lockouts_preparation.ipynb  race_winners_preparation.ipynb  riders_info_preparation.ipynb
notebooks/03_modeling/: constructors_modeling.ipynb  events_held_modeling.ipynb  finishing_positions_modeling.ipynb  podium_lockouts_modeling.ipynb  race_winners_modeling.ipynb  riders_info_modeling.ipynb
notebooks/04_evaluation/: constructors_evaluation.ipynb  events_held_evaluation.ipynb  finishing_positions_evaluation.ipynb  podium_lockouts_evaluation.ipynb  race_winners_evaluation.ipynb  riders_info_evaluation.ipynb
notebooks/05_deployment/: business_recommendations.ipynb  executive_summary.ipynb  integrated_insights.ipynb
tests/: __init__.py  conftest.py
tests/unit/database/: test_config.py  test_exceptions.py
