[project]
name = "motogp-analytics"
version = "0.1.0"
description = "MotoGP data analytics project with datasets from 1949-2022"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0"
]
